--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-rc02'
 }
