--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
