--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,13 +55,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-functions:16.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.1'
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.24.0'
     testImplementation 'com.jraska.livedata:testing-ktx:1.1.0'
     testImplementation "android.arch.core:core-testing:1.1.1"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
     androidTestImplementation 'org.mockito:mockito-android:2.24.0'
     // Used for androidTest however is needed to be setup via debug (see https://stackoverflow.com/a/55244532 for
     // explanation)
