--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ script:
 before_install:
 # Decrypt the google-services.json file
 - openssl aes-256-cbc -K $encrypted_dfb6cccb808e_key -iv $encrypted_dfb6cccb808e_iv
-  -in google-services.json.enc -out google-services.json -d
+  -in app/google-services.json.enc -out app/google-services.json -d
