--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ script:
 - "./gradlew test"
 before_install:
 - openssl aes-256-cbc -K $encrypted_f20c58e0d760_key -iv $encrypted_f20c58e0d760_iv
-  -in app/src/main/res/values/secrets.xml.enc -out app/src/main/res/values/secrets.xml -d
+  -in secrets.xml.enc -out app/src/main/res/values/secrets.xml -d
 - openssl aes-256-cbc -K $encrypted_dfb6cccb808e_key -iv $encrypted_dfb6cccb808e_iv
   -in app/google-services.json.enc -out app/google-services.json -d
