Fix travis CI command
I wasn't running the tests as debug, which is actually required due to
the OpenForTesting annotation.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ android:
   - android-28
   - build-tools-28.0.3
 script:
-- "./gradlew test"
+- "./gradlew testDebug"
 before_install:
 - openssl aes-256-cbc -K $encrypted_f20c58e0d760_key -iv $encrypted_f20c58e0d760_iv
   -in secrets.xml.enc -out app/src/main/res/values/secrets.xml -d
