--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,10 +44,10 @@ dependencies {
     implementation 'com.romandanylyk:pageindicatorview:1.0.3'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
-    implementation 'com.google.android.material:material:1.1.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
+    implementation 'com.google.android.material:material:1.1.0-alpha07'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.vectordrawable:vectordrawable:1.1.0-alpha01'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0-beta02'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.paging:paging-runtime-ktx:2.1.0'
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
@@ -62,12 +62,12 @@ dependencies {
     testImplementation 'com.jraska.livedata:testing-ktx:1.1.0'
     testImplementation "android.arch.core:core-testing:1.1.1"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
     androidTestImplementation 'org.mockito:mockito-android:2.24.0'
     // Used for androidTest however is needed to be setup via debug (see https://stackoverflow.com/a/55244532 for
     // explanation)
-    debugImplementation 'androidx.fragment:fragment-testing:1.1.0-alpha05'
+    debugImplementation 'androidx.fragment:fragment-testing:1.1.0-beta01'
 }
