--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-alpha05'
     implementation "androidx.navigation:navigation-ui-ktx:2.1.0-alpha05"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation "androidx.room:room-runtime:2.1.0"
+    kapt "androidx.room:room-compiler:2.1.0"
+    implementation "androidx.room:room-ktx:2.1.0"
+    testImplementation "androidx.room:room-testing:2.1.0"
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-functions:17.0.0'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
