--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation "com.google.android.material:material:1.1.0-alpha06"
     testImplementation "androidx.room:room-testing:2.1.0"
     testImplementation 'junit:junit:4.12'
     testImplementation 'com.jraska.livedata:testing-ktx:1.1.0'
