Add network call for profile screen
This is still a work in progress. I haven't handled error cases
and I'm not happy with the UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.oliveroneill.wilt">
 
     <application
+            android:name=".WiltApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
