--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,11 +63,13 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation "com.google.android.material:material:1.1.0-alpha06"
+    implementation 'com.github.marlonlom:timeago:4.0.1'
     testImplementation "androidx.room:room-testing:2.1.0"
     testImplementation 'junit:junit:4.12'
     testImplementation 'com.jraska.livedata:testing-ktx:1.1.0'
     testImplementation "android.arch.core:core-testing:1.1.1"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
+    androidTestImplementation "android.arch.core:core-testing:1.1.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
