--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,42 +40,71 @@ android {
 
 dependencies {
     kapt "androidx.room:room-compiler:2.1.0"
+
+    /**
+     * For app
+     */
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    // Spotify
     implementation 'com.spotify.sdk:spotify-auth:1.1.0@aar'
+    // Page indicator
     implementation 'com.romandanylyk:pageindicatorview:1.0.3'
+    // Image presentation and caching
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // Android
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    // Androidx
     implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
-    implementation 'com.google.android.material:material:1.1.0-alpha07'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0-beta02'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.paging:paging-runtime-ktx:2.1.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-alpha05'
-    implementation "androidx.navigation:navigation-ui-ktx:2.1.0-alpha05"
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation "androidx.room:room-runtime:2.1.0"
-    implementation "androidx.room:room-ktx:2.1.0"
+    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-alpha05'
+    implementation 'androidx.room:room-runtime:2.1.0'
+    implementation 'androidx.room:room-ktx:2.1.0'
+    testImplementation 'androidx.room:room-testing:2.1.0'
+    // Material design
+    implementation 'com.google.android.material:material:1.1.0-alpha07'
+    // Firebase
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-functions:17.0.0'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    // JSON deserialisation
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation "com.google.android.material:material:1.1.0-alpha06"
+    // Presenting dates as "hours ago"
     implementation 'com.github.marlonlom:timeago:4.0.1'
+    // Shimmer loading effect
     implementation 'com.facebook.shimmer:shimmer:0.4.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    testImplementation "androidx.room:room-testing:2.1.0"
+
+    /**
+     * For testing
+     */
+    // Junit
     testImplementation 'junit:junit:4.12'
+    // Testing with livedata
     testImplementation 'com.jraska.livedata:testing-ktx:1.1.0'
-    testImplementation "android.arch.core:core-testing:1.1.1"
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
-    androidTestImplementation "android.arch.core:core-testing:1.1.1"
+    // Android
+    testImplementation 'android.arch.core:core-testing:1.1.1'
+    // Mockito
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
+
+    /**
+     * For instrumentation testing
+     */
+    // Android
+    androidTestImplementation 'android.arch.core:core-testing:1.1.1'
+    // Androidx
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    androidTestImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
+    // Mockito
+    androidTestImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
     androidTestImplementation 'org.mockito:mockito-android:2.24.0'
     // Used for androidTest however is needed to be setup via debug (see https://stackoverflow.com/a/55244532 for
     // explanation)
